<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.tapojusti.www.a20180320.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calculation"
        android:textColor="@android:color/background_dark"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.06999999" />

    <!--first line-->

    <Button
        android:id="@+id/button"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@color/colorAccent"
        android:contentDescription="@string/symbol_delete_output"
        android:text="@string/c"
        android:textColor="?android:attr/colorBackground"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.19" />

    <Button
        android:id="@+id/button2"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:background="@android:color/darker_gray"
        android:contentDescription="@string/symbol_divide"
        android:text="@string/divide"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="@+id/button"
        app:layout_constraintEnd_toStartOf="@+id/button3"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button"
        app:layout_constraintTop_toTopOf="@+id/button"
        app:layout_constraintVertical_bias="0.529" />

    <Button
        android:id="@+id/button3"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:background="@android:color/darker_gray"
        android:contentDescription="@string/symbol_multiply"
        android:text="@string/x"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/button2"
        app:layout_constraintEnd_toStartOf="@+id/button4"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button2"
        app:layout_constraintTop_toTopOf="@+id/button2"
        app:layout_constraintVertical_bias="0.529" />

    <Button
        android:id="@+id/button4"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:background="@android:color/darker_gray"
        android:contentDescription="@string/symbol_plus"
        android:text="@string/plus"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/button3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button3"
        app:layout_constraintTop_toTopOf="@+id/button3"
        app:layout_constraintVertical_bias="0.53999996" />

    <!--second line-->

    <Button
        android:id="@+id/button5"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@android:color/darker_gray"
        android:contentDescription="@string/symbol_1"
        android:text="@string/_1"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.39" />

    <Button
        android:id="@+id/button6"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:background="@android:color/darker_gray"
        android:contentDescription="@string/symbol_2"
        android:text="@string/_2"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/button5"
        app:layout_constraintEnd_toStartOf="@+id/button7"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button5"
        app:layout_constraintTop_toTopOf="@+id/button5"
        app:layout_constraintVertical_bias="0.45" />

    <Button
        android:id="@+id/button7"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:background="@android:color/darker_gray"
        android:contentDescription="@string/symbol_3"
        android:text="@string/_3"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/button6"
        app:layout_constraintEnd_toStartOf="@+id/button8"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button6"
        app:layout_constraintTop_toTopOf="@+id/button6"
        app:layout_constraintVertical_bias="0.45" />

    <Button
        android:id="@+id/button8"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:background="@android:color/darker_gray"
        android:contentDescription="@string/minus"
        android:text="@string/minus"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="@+id/button7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button7"
        app:layout_constraintTop_toTopOf="@+id/button7"
        app:layout_constraintVertical_bias="0.45" />

    <!--third line-->

    <Button
        android:id="@+id/button9"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@android:color/darker_gray"
        android:contentDescription="@string/symbol_4"
        android:text="@string/_4"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button10"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.59" />

    <Button
        android:id="@+id/button10"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:background="@android:color/darker_gray"
        android:contentDescription="@string/symbol_5"
        android:text="@string/_5"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/button9"
        app:layout_constraintEnd_toStartOf="@+id/button11"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button9"
        app:layout_constraintTop_toTopOf="@+id/button9"
        app:layout_constraintVertical_bias="0.58" />

    <Button
        android:id="@+id/button11"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:background="@android:color/darker_gray"
        android:contentDescription="@string/symbol_6"
        android:text="@string/_6"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/button10"
        app:layout_constraintEnd_toStartOf="@+id/button12"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button10"
        app:layout_constraintTop_toTopOf="@+id/button10"
        app:layout_constraintVertical_bias="0.58" />

    <Button
        android:id="@+id/button12"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:background="@android:color/darker_gray"
        android:contentDescription="@string/symbol_dot"
        android:text="@string/dot"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="@+id/button11"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button11"
        app:layout_constraintTop_toTopOf="@+id/button11"
        app:layout_constraintVertical_bias="0.58" />

    <!--fourth line-->

    <Button
        android:id="@+id/button13"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@android:color/darker_gray"
        android:contentDescription="@string/symbol_7"
        android:text="@string/_7"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button14"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.79" />

    <Button
        android:id="@+id/button14"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:background="@android:color/darker_gray"
        android:contentDescription="@string/symbol_8"
        android:text="@string/_8"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/button13"
        app:layout_constraintEnd_toStartOf="@+id/button15"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button13"
        app:layout_constraintTop_toTopOf="@+id/button13"
        app:layout_constraintVertical_bias="0.58" />

    <Button
        android:id="@+id/button15"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:background="@android:color/darker_gray"
        android:contentDescription="@string/symbol_9"
        android:text="@string/_9"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/button14"
        app:layout_constraintEnd_toStartOf="@+id/button16"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button14"
        app:layout_constraintTop_toTopOf="@+id/button14"
        app:layout_constraintVertical_bias="0.58" />

    <Button
        android:id="@+id/button16"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:background="@android:color/darker_gray"
        android:contentDescription="@string/symbol_0"
        android:text="@string/_0"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="@+id/button15"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button15"
        app:layout_constraintTop_toTopOf="@+id/button15"
        app:layout_constraintVertical_bias="0.58" />


</android.support.constraint.ConstraintLayout>
